dev/ingressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: my-app-ingress-class
spec:
  controller: ingress.k8s.aws/alb
  # parameters:
  #   apiGroup: elbv2.k8s.aws
  #   kind: IngressClassParams
  #   name: rancher-alb
