dev/servc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
